<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>marvelmind_nav</name>
  <version>1.0.0</version>
  <description>The ROS2 port of the Marvelmind ROS package</description>
  <maintainer email="tejas.kumar.shastha@ipa.fraunhofer.de">ipa-kut</maintainer>
  <author email="tejas.kumar.shastha@ipa.fraunhofer.de">ipa-kut</author>
  <license>BSD</license>
  <url type="website">http://marvelmind.com</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>marvelmind_interfaces</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rmw</depend>

<export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
