<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>marvelmind_nav</name>
  <version>1.0.0</version>
  <description>The ROS2 port of the Marvelmind ROS package</description>
  <maintainer email="tejas.kumar.shastha@ipa.fraunhofer.de">ipa-kut</maintainer>
  <author email="tejas.kumar.shastha@ipa.fraunhofer.de">ipa-kut</author>
  <license>BSD</license>
  <url type="website">http://marvelmind.com</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>lifecycle_msgs</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch_xml</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>rmw</depend>
  <depend>marvelmind_interfaces</depend>


<export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
